// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01 Programm 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "action": "STEP",
            "line": 1,
            "type": "call",
          },
        ],
        "line": 2,
        "test": Object {
          "line": 0,
          "state": "NOT_IS_WALL",
          "type": "state",
        },
        "type": "while",
      },
    ],
    "line": 2,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`02 Karol 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "action": "STEP",
            "line": 3,
            "type": "call",
          },
          Object {
            "action": "TURN_LEFT",
            "line": 4,
            "type": "call",
          },
          Object {
            "action": "BRICK_PUT",
            "line": 5,
            "type": "call",
          },
          Object {
            "action": "TURN_RIGHT",
            "line": 6,
            "type": "call",
          },
          Object {
            "body": Array [
              Object {
                "action": "TURN_LEFT",
                "line": 8,
                "type": "call",
              },
              Object {
                "action": "TURN_LEFT",
                "line": 9,
                "type": "call",
              },
            ],
            "elseBody": Array [],
            "line": 10,
            "test": Object {
              "line": 7,
              "state": "IS_WALL",
              "type": "state",
            },
            "type": "if",
          },
        ],
        "line": 11,
        "times": "9",
        "type": "repeat",
      },
    ],
    "line": 11,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`03 Vergleichen 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "action": "BRICK_TAKE",
            "line": 7,
            "type": "call",
          },
          Object {
            "action": "TURN_LEFT",
            "line": 8,
            "type": "call",
          },
        ],
        "line": 9,
        "test": Object {
          "line": 6,
          "state": "IS_BRICK",
          "type": "state",
        },
        "type": "while",
      },
      Object {
        "body": Array [
          Object {
            "action": "TURN_LEFT",
            "line": 12,
            "type": "call",
          },
          Object {
            "body": Array [
              Object {
                "action": "BRICK_TAKE",
                "line": 14,
                "type": "call",
              },
            ],
            "line": 15,
            "test": Object {
              "line": 13,
              "state": "IS_BRICK",
              "type": "state",
            },
            "type": "while",
          },
        ],
        "line": 16,
        "times": "3",
        "type": "repeat",
      },
      Object {
        "action": "TURN_LEFT",
        "line": 17,
        "type": "call",
      },
    ],
    "line": 9,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`04 Neue Bedingung 1`] = `
Object {
  "conditions": Array [
    Object {
      "body": Array [
        Object {
          "action": "FALSE",
          "line": 7,
          "type": "systemCall",
        },
        Object {
          "body": Array [
            Object {
              "action": "BRICK_TAKE",
              "line": 9,
              "type": "call",
            },
            Object {
              "body": Array [
                Object {
                  "action": "BRICK_TAKE",
                  "line": 11,
                  "type": "call",
                },
                Object {
                  "action": "TRUE",
                  "line": 12,
                  "type": "systemCall",
                },
                Object {
                  "body": Array [
                    Object {
                      "action": "FALSE",
                      "line": 13,
                      "type": "systemCall",
                    },
                  ],
                  "elseBody": Array [],
                  "line": 13,
                  "test": Object {
                    "line": 13,
                    "state": "IS_BRICK",
                    "type": "state",
                  },
                  "type": "if",
                },
                Object {
                  "action": "BRICK_PUT",
                  "line": 14,
                  "type": "call",
                },
              ],
              "elseBody": Array [],
              "line": 15,
              "test": Object {
                "line": 10,
                "state": "IS_BRICK",
                "type": "state",
              },
              "type": "if",
            },
            Object {
              "action": "BRICK_PUT",
              "line": 16,
              "type": "call",
            },
          ],
          "elseBody": Array [],
          "line": 17,
          "test": Object {
            "line": 8,
            "state": "IS_BRICK",
            "type": "state",
          },
          "type": "if",
        },
      ],
      "identifier": "zweiziegel",
      "line": 18,
      "type": "condition",
    },
  ],
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "action": "TURN_LEFT",
            "line": 22,
            "type": "call",
          },
        ],
        "elseBody": Array [
          Object {
            "action": "TURN_RIGHT",
            "line": 24,
            "type": "call",
          },
        ],
        "line": 25,
        "test": Object {
          "line": 21,
          "name": "zweiziegel",
          "type": "conditionCall",
        },
        "type": "if",
      },
    ],
    "line": 25,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`05 Schwimmbad 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "action": "TURN_LEFT",
          "line": 7,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 8,
          "type": "call",
        },
      ],
      "identifier": "umdrehen",
      "line": 9,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "body": Array [
              Object {
                "body": Array [
                  Object {
                    "action": "BRICK_PUT",
                    "line": 16,
                    "type": "call",
                  },
                  Object {
                    "action": "STEP",
                    "line": 17,
                    "type": "call",
                  },
                ],
                "line": 18,
                "test": Object {
                  "line": 15,
                  "state": "NOT_IS_WALL",
                  "type": "state",
                },
                "type": "while",
              },
              Object {
                "action": "TURN_LEFT",
                "line": 19,
                "type": "call",
              },
            ],
            "line": 20,
            "times": "12",
            "type": "repeat",
          },
          Object {
            "action": "TURN_LEFT",
            "line": 23,
            "type": "call",
          },
          Object {
            "body": Array [
              Object {
                "action": "STEP",
                "line": 25,
                "type": "call",
              },
            ],
            "line": 26,
            "times": "2",
            "type": "repeat",
          },
          Object {
            "action": "TURN_RIGHT",
            "line": 27,
            "type": "call",
          },
          Object {
            "body": Array [
              Object {
                "action": "BRICK_PUT",
                "line": 30,
                "type": "call",
              },
            ],
            "line": 30,
            "times": "3",
            "type": "repeat",
          },
          Object {
            "action": "STEP",
            "line": 31,
            "type": "call",
          },
          Object {
            "body": Array [
              Object {
                "body": Array [
                  Object {
                    "action": "BRICK_PUT",
                    "line": 33,
                    "type": "call",
                  },
                ],
                "line": 33,
                "times": "3",
                "type": "repeat",
              },
              Object {
                "action": "STEP",
                "line": 34,
                "type": "call",
              },
              Object {
                "line": 35,
                "name": "umdrehen",
                "type": "functionCall",
              },
              Object {
                "body": Array [
                  Object {
                    "action": "BRICK_TAKE",
                    "line": 36,
                    "type": "call",
                  },
                ],
                "line": 36,
                "times": "3",
                "type": "repeat",
              },
              Object {
                "line": 37,
                "name": "umdrehen",
                "type": "functionCall",
              },
            ],
            "line": 38,
            "test": Object {
              "line": 32,
              "state": "NOT_IS_BRICK",
              "type": "state",
            },
            "type": "while",
          },
          Object {
            "action": "STEP",
            "line": 39,
            "type": "call",
          },
          Object {
            "line": 40,
            "name": "umdrehen",
            "type": "functionCall",
          },
          Object {
            "body": Array [
              Object {
                "action": "BRICK_TAKE",
                "line": 41,
                "type": "call",
              },
            ],
            "line": 41,
            "times": "3",
            "type": "repeat",
          },
          Object {
            "line": 42,
            "name": "umdrehen",
            "type": "functionCall",
          },
          Object {
            "action": "TURN_RIGHT",
            "line": 45,
            "type": "call",
          },
          Object {
            "body": Array [
              Object {
                "action": "STEP",
                "line": 46,
                "type": "call",
              },
            ],
            "line": 46,
            "times": "2",
            "type": "repeat",
          },
          Object {
            "action": "TURN_RIGHT",
            "line": 47,
            "type": "call",
          },
          Object {
            "body": Array [
              Object {
                "body": Array [
                  Object {
                    "action": "BRICK_TAKE",
                    "line": 52,
                    "type": "call",
                  },
                  Object {
                    "action": "STEP",
                    "line": 53,
                    "type": "call",
                  },
                ],
                "line": 54,
                "test": Object {
                  "line": 51,
                  "state": "NOT_IS_WALL",
                  "type": "state",
                },
                "type": "while",
              },
              Object {
                "action": "TURN_RIGHT",
                "line": 55,
                "type": "call",
              },
            ],
            "line": 56,
            "times": "12",
            "type": "repeat",
          },
          Object {
            "body": Array [
              Object {
                "action": "STEP",
                "line": 60,
                "type": "call",
              },
            ],
            "line": 61,
            "test": Object {
              "line": 59,
              "state": "NOT_IS_WALL",
              "type": "state",
            },
            "type": "while",
          },
          Object {
            "line": 62,
            "name": "umdrehen",
            "type": "functionCall",
          },
        ],
        "line": 64,
        "times": "4",
        "type": "repeat",
      },
    ],
    "line": 64,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`06 SBad mit Prozeduren 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "body": Array [
                Object {
                  "action": "BRICK_PUT",
                  "line": 13,
                  "type": "call",
                },
                Object {
                  "action": "STEP",
                  "line": 14,
                  "type": "call",
                },
              ],
              "line": 15,
              "test": Object {
                "line": 12,
                "state": "NOT_IS_WALL",
                "type": "state",
              },
              "type": "while",
            },
            Object {
              "action": "TURN_LEFT",
              "line": 16,
              "type": "call",
            },
          ],
          "line": 17,
          "times": "12",
          "type": "repeat",
        },
      ],
      "identifier": "bauebecken",
      "line": 18,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "body": Array [
                Object {
                  "action": "BRICK_TAKE",
                  "line": 24,
                  "type": "call",
                },
                Object {
                  "action": "STEP",
                  "line": 25,
                  "type": "call",
                },
              ],
              "line": 26,
              "test": Object {
                "line": 23,
                "state": "NOT_IS_WALL",
                "type": "state",
              },
              "type": "while",
            },
            Object {
              "action": "TURN_RIGHT",
              "line": 27,
              "type": "call",
            },
          ],
          "line": 28,
          "times": "12",
          "type": "repeat",
        },
      ],
      "identifier": "abbauenbecken",
      "line": 29,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "action": "TURN_LEFT",
          "line": 33,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 34,
          "type": "call",
        },
      ],
      "identifier": "umdrehen",
      "line": 35,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "action": "BRICK_PUT",
              "line": 41,
              "type": "call",
            },
          ],
          "line": 41,
          "times": "3",
          "type": "repeat",
        },
        Object {
          "action": "STEP",
          "line": 42,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "body": Array [
                Object {
                  "action": "BRICK_PUT",
                  "line": 44,
                  "type": "call",
                },
              ],
              "line": 44,
              "times": "3",
              "type": "repeat",
            },
            Object {
              "action": "STEP",
              "line": 45,
              "type": "call",
            },
            Object {
              "line": 46,
              "name": "umdrehen",
              "type": "functionCall",
            },
            Object {
              "body": Array [
                Object {
                  "action": "BRICK_TAKE",
                  "line": 47,
                  "type": "call",
                },
              ],
              "line": 47,
              "times": "3",
              "type": "repeat",
            },
            Object {
              "line": 48,
              "name": "umdrehen",
              "type": "functionCall",
            },
          ],
          "line": 49,
          "test": Object {
            "line": 43,
            "state": "NOT_IS_BRICK",
            "type": "state",
          },
          "type": "while",
        },
        Object {
          "action": "STEP",
          "line": 50,
          "type": "call",
        },
        Object {
          "line": 51,
          "name": "umdrehen",
          "type": "functionCall",
        },
        Object {
          "body": Array [
            Object {
              "action": "BRICK_TAKE",
              "line": 52,
              "type": "call",
            },
          ],
          "line": 52,
          "times": "3",
          "type": "repeat",
        },
        Object {
          "line": 53,
          "name": "umdrehen",
          "type": "functionCall",
        },
      ],
      "identifier": "schwimmen",
      "line": 54,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "line": 60,
          "name": "bauebecken",
          "type": "functionCall",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 63,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "action": "STEP",
              "line": 64,
              "type": "call",
            },
          ],
          "line": 64,
          "times": "2",
          "type": "repeat",
        },
        Object {
          "action": "TURN_RIGHT",
          "line": 65,
          "type": "call",
        },
        Object {
          "line": 67,
          "name": "schwimmen",
          "type": "functionCall",
        },
        Object {
          "action": "TURN_RIGHT",
          "line": 70,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "action": "STEP",
              "line": 71,
              "type": "call",
            },
          ],
          "line": 71,
          "times": "2",
          "type": "repeat",
        },
        Object {
          "action": "TURN_RIGHT",
          "line": 72,
          "type": "call",
        },
        Object {
          "line": 74,
          "name": "abbauenbecken",
          "type": "functionCall",
        },
        Object {
          "body": Array [
            Object {
              "action": "STEP",
              "line": 78,
              "type": "call",
            },
          ],
          "line": 79,
          "test": Object {
            "line": 77,
            "state": "NOT_IS_WALL",
            "type": "state",
          },
          "type": "while",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 80,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 80,
          "type": "call",
        },
      ],
      "identifier": "hauptteil",
      "line": 81,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "line": 90,
            "name": "hauptteil",
            "type": "functionCall",
          },
        ],
        "line": 91,
        "times": "4",
        "type": "repeat",
      },
    ],
    "line": 92,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`07 SBad mit Schell Langsam 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "action": "FAST",
          "line": 9,
          "type": "systemCall",
        },
        Object {
          "body": Array [
            Object {
              "body": Array [
                Object {
                  "action": "BRICK_PUT",
                  "line": 12,
                  "type": "call",
                },
                Object {
                  "action": "STEP",
                  "line": 13,
                  "type": "call",
                },
              ],
              "line": 14,
              "test": Object {
                "line": 11,
                "state": "NOT_IS_WALL",
                "type": "state",
              },
              "type": "while",
            },
            Object {
              "action": "TURN_LEFT",
              "line": 15,
              "type": "call",
            },
          ],
          "line": 16,
          "times": "12",
          "type": "repeat",
        },
        Object {
          "action": "SLOW",
          "line": 17,
          "type": "systemCall",
        },
      ],
      "identifier": "bauebecken",
      "line": 18,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "action": "FAST",
          "line": 22,
          "type": "systemCall",
        },
        Object {
          "body": Array [
            Object {
              "body": Array [
                Object {
                  "action": "BRICK_TAKE",
                  "line": 25,
                  "type": "call",
                },
                Object {
                  "action": "STEP",
                  "line": 26,
                  "type": "call",
                },
              ],
              "line": 27,
              "test": Object {
                "line": 24,
                "state": "NOT_IS_WALL",
                "type": "state",
              },
              "type": "while",
            },
            Object {
              "action": "TURN_RIGHT",
              "line": 28,
              "type": "call",
            },
          ],
          "line": 29,
          "times": "12",
          "type": "repeat",
        },
        Object {
          "action": "SLOW",
          "line": 30,
          "type": "systemCall",
        },
      ],
      "identifier": "abbauenbecken",
      "line": 31,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "action": "TURN_LEFT",
          "line": 35,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 36,
          "type": "call",
        },
      ],
      "identifier": "umdrehen",
      "line": 37,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "action": "BRICK_PUT",
              "line": 43,
              "type": "call",
            },
          ],
          "line": 43,
          "times": "3",
          "type": "repeat",
        },
        Object {
          "action": "STEP",
          "line": 44,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "body": Array [
                Object {
                  "action": "BRICK_PUT",
                  "line": 46,
                  "type": "call",
                },
              ],
              "line": 46,
              "times": "3",
              "type": "repeat",
            },
            Object {
              "action": "STEP",
              "line": 47,
              "type": "call",
            },
            Object {
              "line": 48,
              "name": "umdrehen",
              "type": "functionCall",
            },
            Object {
              "body": Array [
                Object {
                  "action": "BRICK_TAKE",
                  "line": 49,
                  "type": "call",
                },
              ],
              "line": 49,
              "times": "3",
              "type": "repeat",
            },
            Object {
              "line": 50,
              "name": "umdrehen",
              "type": "functionCall",
            },
          ],
          "line": 51,
          "test": Object {
            "line": 45,
            "state": "NOT_IS_BRICK",
            "type": "state",
          },
          "type": "while",
        },
        Object {
          "action": "STEP",
          "line": 52,
          "type": "call",
        },
        Object {
          "line": 53,
          "name": "umdrehen",
          "type": "functionCall",
        },
        Object {
          "body": Array [
            Object {
              "action": "BRICK_TAKE",
              "line": 54,
              "type": "call",
            },
          ],
          "line": 54,
          "times": "3",
          "type": "repeat",
        },
        Object {
          "line": 55,
          "name": "umdrehen",
          "type": "functionCall",
        },
      ],
      "identifier": "schwimmen",
      "line": 56,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "line": 61,
          "name": "bauebecken",
          "type": "functionCall",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 64,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "action": "STEP",
              "line": 65,
              "type": "call",
            },
          ],
          "line": 65,
          "times": "2",
          "type": "repeat",
        },
        Object {
          "action": "TURN_RIGHT",
          "line": 66,
          "type": "call",
        },
        Object {
          "line": 68,
          "name": "schwimmen",
          "type": "functionCall",
        },
        Object {
          "action": "TURN_RIGHT",
          "line": 71,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "action": "STEP",
              "line": 72,
              "type": "call",
            },
          ],
          "line": 72,
          "times": "2",
          "type": "repeat",
        },
        Object {
          "action": "TURN_RIGHT",
          "line": 73,
          "type": "call",
        },
        Object {
          "line": 75,
          "name": "abbauenbecken",
          "type": "functionCall",
        },
        Object {
          "body": Array [
            Object {
              "action": "STEP",
              "line": 78,
              "type": "call",
            },
          ],
          "line": 78,
          "test": Object {
            "line": 78,
            "state": "NOT_IS_WALL",
            "type": "state",
          },
          "type": "while",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 79,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 79,
          "type": "call",
        },
      ],
      "identifier": "hauptteil",
      "line": 80,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "line": 87,
            "name": "hauptteil",
            "type": "functionCall",
          },
        ],
        "line": 88,
        "times": "4",
        "type": "repeat",
      },
    ],
    "line": 89,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`08 Rekursion 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "action": "BRICK_TAKE",
              "line": 8,
              "type": "call",
            },
            Object {
              "line": 9,
              "name": "pfeilersetzen",
              "type": "functionCall",
            },
          ],
          "elseBody": Array [
            Object {
              "action": "TURN_LEFT",
              "line": 11,
              "type": "call",
            },
            Object {
              "action": "TURN_LEFT",
              "line": 12,
              "type": "call",
            },
          ],
          "line": 13,
          "test": Object {
            "line": 7,
            "state": "IS_BRICK",
            "type": "state",
          },
          "type": "if",
        },
        Object {
          "action": "BRICK_PUT",
          "line": 14,
          "type": "call",
        },
      ],
      "identifier": "pfeilersetzen",
      "line": 15,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [
      Object {
        "line": 18,
        "name": "pfeilersetzen",
        "type": "functionCall",
      },
      Object {
        "action": "BRICK_TAKE",
        "line": 19,
        "type": "call",
      },
    ],
    "line": 20,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`09 Schachbrett 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "action": "MARKER_SET",
              "line": 8,
              "type": "call",
            },
            Object {
              "action": "STEP",
              "line": 9,
              "type": "call",
            },
            Object {
              "body": Array [
                Object {
                  "action": "STEP",
                  "line": 10,
                  "type": "call",
                },
              ],
              "elseBody": Array [],
              "line": 10,
              "test": Object {
                "line": 10,
                "state": "NOT_IS_WALL",
                "type": "state",
              },
              "type": "if",
            },
          ],
          "line": 11,
          "test": Object {
            "line": 7,
            "state": "NOT_IS_WALL",
            "type": "state",
          },
          "type": "while",
        },
      ],
      "identifier": "markierezeile",
      "line": 12,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "line": 15,
            "name": "markierezeile",
            "type": "functionCall",
          },
          Object {
            "action": "TURN_LEFT",
            "line": 16,
            "type": "call",
          },
          Object {
            "action": "STEP",
            "line": 17,
            "type": "call",
          },
          Object {
            "action": "TURN_LEFT",
            "line": 18,
            "type": "call",
          },
          Object {
            "line": 19,
            "name": "markierezeile",
            "type": "functionCall",
          },
          Object {
            "action": "TURN_RIGHT",
            "line": 20,
            "type": "call",
          },
          Object {
            "action": "STEP",
            "line": 21,
            "type": "call",
          },
          Object {
            "action": "TURN_RIGHT",
            "line": 22,
            "type": "call",
          },
        ],
        "line": 23,
        "times": "3",
        "type": "repeat",
      },
    ],
    "line": 23,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Bibliothek 1`] = `
Object {
  "conditions": Array [
    Object {
      "body": Array [
        Object {
          "action": "FALSE",
          "line": 50,
          "type": "systemCall",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 51,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "action": "TRUE",
              "line": 52,
              "type": "systemCall",
            },
          ],
          "elseBody": Array [],
          "line": 52,
          "test": Object {
            "line": 52,
            "state": "IS_BRICK",
            "type": "state",
          },
          "type": "if",
        },
        Object {
          "action": "TURN_RIGHT",
          "line": 53,
          "type": "call",
        },
      ],
      "identifier": "istziegellinks",
      "line": 54,
      "type": "condition",
    },
    Object {
      "body": Array [
        Object {
          "action": "FALSE",
          "line": 58,
          "type": "systemCall",
        },
        Object {
          "action": "TURN_RIGHT",
          "line": 59,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "action": "TRUE",
              "line": 60,
              "type": "systemCall",
            },
          ],
          "elseBody": Array [],
          "line": 60,
          "test": Object {
            "line": 60,
            "state": "IS_BRICK",
            "type": "state",
          },
          "type": "if",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 61,
          "type": "call",
        },
      ],
      "identifier": "istziegelrechts",
      "line": 62,
      "type": "condition",
    },
    Object {
      "body": Array [
        Object {
          "action": "FALSE",
          "line": 66,
          "type": "systemCall",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 67,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "action": "TRUE",
              "line": 68,
              "type": "systemCall",
            },
          ],
          "elseBody": Array [],
          "line": 68,
          "test": Object {
            "line": 68,
            "state": "IS_WALL",
            "type": "state",
          },
          "type": "if",
        },
        Object {
          "action": "TURN_RIGHT",
          "line": 69,
          "type": "call",
        },
      ],
      "identifier": "istwandlinks",
      "line": 70,
      "type": "condition",
    },
    Object {
      "body": Array [
        Object {
          "action": "FALSE",
          "line": 74,
          "type": "systemCall",
        },
        Object {
          "action": "TURN_RIGHT",
          "line": 75,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "action": "TRUE",
              "line": 76,
              "type": "systemCall",
            },
          ],
          "elseBody": Array [],
          "line": 76,
          "test": Object {
            "line": 76,
            "state": "IS_WALL",
            "type": "state",
          },
          "type": "if",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 77,
          "type": "call",
        },
      ],
      "identifier": "istwandrechts",
      "line": 78,
      "type": "condition",
    },
    Object {
      "body": Array [
        Object {
          "action": "TRUE",
          "line": 82,
          "type": "systemCall",
        },
        Object {
          "body": Array [
            Object {
              "action": "FALSE",
              "line": 83,
              "type": "systemCall",
            },
          ],
          "elseBody": Array [],
          "line": 83,
          "test": Object {
            "line": 83,
            "state": "IS_WALL",
            "type": "state",
          },
          "type": "if",
        },
        Object {
          "body": Array [
            Object {
              "action": "FALSE",
              "line": 84,
              "type": "systemCall",
            },
          ],
          "elseBody": Array [],
          "line": 84,
          "test": Object {
            "line": 84,
            "state": "IS_BRICK",
            "type": "state",
          },
          "type": "if",
        },
      ],
      "identifier": "istfrei",
      "line": 85,
      "type": "condition",
    },
    Object {
      "body": Array [
        Object {
          "action": "TRUE",
          "line": 89,
          "type": "systemCall",
        },
        Object {
          "body": Array [
            Object {
              "action": "FALSE",
              "line": 90,
              "type": "systemCall",
            },
          ],
          "elseBody": Array [],
          "line": 90,
          "test": Object {
            "line": 90,
            "test": Object {
              "line": 90,
              "name": "istfrei",
              "type": "conditionCall",
            },
            "type": "not",
          },
          "type": "if",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 91,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "action": "FALSE",
              "line": 92,
              "type": "systemCall",
            },
          ],
          "elseBody": Array [],
          "line": 92,
          "test": Object {
            "line": 92,
            "test": Object {
              "line": 92,
              "name": "istfrei",
              "type": "conditionCall",
            },
            "type": "not",
          },
          "type": "if",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 93,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "action": "FALSE",
              "line": 94,
              "type": "systemCall",
            },
          ],
          "elseBody": Array [],
          "line": 94,
          "test": Object {
            "line": 94,
            "test": Object {
              "line": 94,
              "name": "istfrei",
              "type": "conditionCall",
            },
            "type": "not",
          },
          "type": "if",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 95,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "action": "FALSE",
              "line": 96,
              "type": "systemCall",
            },
          ],
          "elseBody": Array [],
          "line": 96,
          "test": Object {
            "line": 96,
            "test": Object {
              "line": 96,
              "name": "istfrei",
              "type": "conditionCall",
            },
            "type": "not",
          },
          "type": "if",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 97,
          "type": "call",
        },
      ],
      "identifier": "istrundumfrei",
      "line": 98,
      "type": "condition",
    },
  ],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "action": "TURN_LEFT",
          "line": 7,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 8,
          "type": "call",
        },
      ],
      "identifier": "umdrehen",
      "line": 9,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "line": 13,
          "name": "umdrehen",
          "type": "functionCall",
        },
        Object {
          "action": "STEP",
          "line": 14,
          "type": "call",
        },
        Object {
          "line": 15,
          "name": "umdrehen",
          "type": "functionCall",
        },
      ],
      "identifier": "schrittrückwärts",
      "line": 16,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "line": 20,
          "name": "umdrehen",
          "type": "functionCall",
        },
        Object {
          "action": "BRICK_PUT",
          "line": 21,
          "type": "call",
        },
        Object {
          "line": 22,
          "name": "umdrehen",
          "type": "functionCall",
        },
      ],
      "identifier": "hintenhinlegen",
      "line": 23,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "action": "TURN_LEFT",
          "line": 28,
          "type": "call",
        },
        Object {
          "action": "STEP",
          "line": 29,
          "type": "call",
        },
        Object {
          "action": "TURN_RIGHT",
          "line": 30,
          "type": "call",
        },
      ],
      "identifier": "schrittlinks",
      "line": 31,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "action": "TURN_RIGHT",
          "line": 36,
          "type": "call",
        },
        Object {
          "action": "STEP",
          "line": 37,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 38,
          "type": "call",
        },
      ],
      "identifier": "schrittrechts",
      "line": 39,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "action": "TURN_LEFT",
              "line": 44,
              "type": "call",
            },
          ],
          "line": 45,
          "test": Object {
            "line": 43,
            "test": Object {
              "line": 43,
              "state": "IS_SOUTH",
              "type": "state",
            },
            "type": "not",
          },
          "type": "while",
        },
      ],
      "identifier": "schaunachsüden",
      "line": 46,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [],
    "line": 0,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Invertieren 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "body": Array [
              Object {
                "action": "BRICK_TAKE",
                "line": 3,
                "type": "call",
              },
            ],
            "elseBody": Array [
              Object {
                "action": "BRICK_PUT",
                "line": 5,
                "type": "call",
              },
            ],
            "line": 6,
            "test": Object {
              "line": 2,
              "state": "IS_BRICK",
              "type": "state",
            },
            "type": "if",
          },
          Object {
            "action": "STEP",
            "line": 7,
            "type": "call",
          },
        ],
        "line": 8,
        "test": Object {
          "line": 1,
          "state": "NOT_IS_WALL",
          "type": "state",
        },
        "type": "while",
      },
    ],
    "line": 8,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Invertieren Gesamt 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "action": "BRICK_TAKE",
              "line": 7,
              "type": "call",
            },
          ],
          "elseBody": Array [
            Object {
              "action": "BRICK_PUT",
              "line": 9,
              "type": "call",
            },
          ],
          "line": 10,
          "test": Object {
            "line": 6,
            "state": "IS_BRICK",
            "type": "state",
          },
          "type": "if",
        },
      ],
      "identifier": "invertieren",
      "line": 11,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "line": 15,
              "name": "invertieren",
              "type": "functionCall",
            },
            Object {
              "action": "STEP",
              "line": 16,
              "type": "call",
            },
          ],
          "line": 17,
          "test": Object {
            "line": 14,
            "state": "NOT_IS_WALL",
            "type": "state",
          },
          "type": "while",
        },
      ],
      "identifier": "einereihe",
      "line": 18,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "action": "TURN_LEFT",
          "line": 21,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "line": 23,
              "name": "invertieren",
              "type": "functionCall",
            },
            Object {
              "action": "STEP",
              "line": 24,
              "type": "call",
            },
            Object {
              "action": "TURN_LEFT",
              "line": 25,
              "type": "call",
            },
          ],
          "elseBody": Array [],
          "line": 26,
          "test": Object {
            "line": 22,
            "state": "NOT_IS_WALL",
            "type": "state",
          },
          "type": "if",
        },
      ],
      "identifier": "nachlinks",
      "line": 27,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "action": "TURN_RIGHT",
          "line": 30,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "line": 32,
              "name": "invertieren",
              "type": "functionCall",
            },
            Object {
              "action": "STEP",
              "line": 33,
              "type": "call",
            },
            Object {
              "action": "TURN_RIGHT",
              "line": 34,
              "type": "call",
            },
          ],
          "elseBody": Array [],
          "line": 35,
          "test": Object {
            "line": 31,
            "state": "NOT_IS_WALL",
            "type": "state",
          },
          "type": "if",
        },
      ],
      "identifier": "nachrechts",
      "line": 36,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "action": "STEP",
          "line": 39,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 40,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 41,
          "type": "call",
        },
        Object {
          "line": 42,
          "name": "invertieren",
          "type": "functionCall",
        },
        Object {
          "action": "STEP",
          "line": 43,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 44,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 45,
          "type": "call",
        },
      ],
      "identifier": "ursprung",
      "line": 46,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [
      Object {
        "line": 49,
        "name": "ursprung",
        "type": "functionCall",
      },
      Object {
        "body": Array [
          Object {
            "line": 51,
            "name": "einereihe",
            "type": "functionCall",
          },
          Object {
            "body": Array [
              Object {
                "line": 53,
                "name": "nachlinks",
                "type": "functionCall",
              },
            ],
            "elseBody": Array [
              Object {
                "line": 55,
                "name": "nachrechts",
                "type": "functionCall",
              },
            ],
            "line": 56,
            "test": Object {
              "line": 52,
              "state": "IS_SOUTH",
              "type": "state",
            },
            "type": "if",
          },
        ],
        "line": 57,
        "test": Object {
          "line": 50,
          "state": "NOT_IS_WALL",
          "type": "state",
        },
        "type": "while",
      },
    ],
    "line": 58,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Kurze Diagonale 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "action": "BRICK_PUT",
            "line": 2,
            "type": "call",
          },
          Object {
            "action": "STEP",
            "line": 3,
            "type": "call",
          },
          Object {
            "action": "TURN_RIGHT",
            "line": 4,
            "type": "call",
          },
          Object {
            "action": "STEP",
            "line": 5,
            "type": "call",
          },
          Object {
            "action": "TURN_LEFT",
            "line": 6,
            "type": "call",
          },
        ],
        "line": 7,
        "times": "3",
        "type": "repeat",
      },
    ],
    "line": 7,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Labyrinth einfach 1`] = `
Object {
  "conditions": Array [
    Object {
      "body": Array [
        Object {
          "action": "FAST",
          "line": 17,
          "type": "systemCall",
        },
        Object {
          "action": "FALSE",
          "line": 18,
          "type": "systemCall",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 19,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "action": "TRUE",
              "line": 20,
              "type": "systemCall",
            },
          ],
          "elseBody": Array [],
          "line": 20,
          "test": Object {
            "line": 20,
            "state": "IS_BRICK",
            "type": "state",
          },
          "type": "if",
        },
        Object {
          "action": "TURN_RIGHT",
          "line": 21,
          "type": "call",
        },
        Object {
          "action": "SLOW",
          "line": 22,
          "type": "systemCall",
        },
      ],
      "identifier": "istlinksziegel",
      "line": 23,
      "type": "condition",
    },
    Object {
      "body": Array [
        Object {
          "action": "FAST",
          "line": 26,
          "type": "systemCall",
        },
        Object {
          "action": "FALSE",
          "line": 27,
          "type": "systemCall",
        },
        Object {
          "action": "TURN_RIGHT",
          "line": 28,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "action": "TRUE",
              "line": 29,
              "type": "systemCall",
            },
          ],
          "elseBody": Array [],
          "line": 29,
          "test": Object {
            "line": 29,
            "state": "IS_BRICK",
            "type": "state",
          },
          "type": "if",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 30,
          "type": "call",
        },
        Object {
          "action": "SLOW",
          "line": 31,
          "type": "systemCall",
        },
      ],
      "identifier": "istrechtsziegel",
      "line": 32,
      "type": "condition",
    },
    Object {
      "body": Array [
        Object {
          "action": "FALSE",
          "line": 35,
          "type": "systemCall",
        },
        Object {
          "body": Array [
            Object {
              "body": Array [
                Object {
                  "action": "TRUE",
                  "line": 37,
                  "type": "systemCall",
                },
              ],
              "elseBody": Array [],
              "line": 37,
              "test": Object {
                "line": 37,
                "state": "NOT_IS_BRICK",
                "type": "state",
              },
              "type": "if",
            },
          ],
          "elseBody": Array [],
          "line": 38,
          "test": Object {
            "line": 36,
            "name": "istlinksziegel",
            "type": "conditionCall",
          },
          "type": "if",
        },
      ],
      "identifier": "istlinksziegelundfrei",
      "line": 39,
      "type": "condition",
    },
    Object {
      "body": Array [
        Object {
          "action": "FALSE",
          "line": 42,
          "type": "systemCall",
        },
        Object {
          "body": Array [
            Object {
              "body": Array [
                Object {
                  "action": "TRUE",
                  "line": 44,
                  "type": "systemCall",
                },
              ],
              "elseBody": Array [],
              "line": 44,
              "test": Object {
                "line": 44,
                "state": "NOT_IS_BRICK",
                "type": "state",
              },
              "type": "if",
            },
          ],
          "elseBody": Array [],
          "line": 45,
          "test": Object {
            "line": 43,
            "name": "istrechtsziegel",
            "type": "conditionCall",
          },
          "type": "if",
        },
      ],
      "identifier": "istrechtsziegelundfrei",
      "line": 46,
      "type": "condition",
    },
  ],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "action": "FAST",
          "line": 4,
          "type": "systemCall",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 5,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 6,
          "type": "call",
        },
        Object {
          "action": "SLOW",
          "line": 7,
          "type": "systemCall",
        },
      ],
      "identifier": "umdrehen",
      "line": 8,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "action": "STEP",
          "line": 11,
          "type": "call",
        },
        Object {
          "action": "STEP",
          "line": 12,
          "type": "call",
        },
        Object {
          "action": "TURN_RIGHT",
          "line": 13,
          "type": "call",
        },
      ],
      "identifier": "reihehoch",
      "line": 14,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "action": "TURN_LEFT",
            "line": 52,
            "type": "call",
          },
        ],
        "line": 53,
        "test": Object {
          "line": 51,
          "test": Object {
            "line": 51,
            "state": "IS_EAST",
            "type": "state",
          },
          "type": "not",
        },
        "type": "while",
      },
      Object {
        "body": Array [
          Object {
            "body": Array [
              Object {
                "action": "STEP",
                "line": 58,
                "type": "call",
              },
            ],
            "line": 59,
            "test": Object {
              "line": 57,
              "name": "istlinksziegelundfrei",
              "type": "conditionCall",
            },
            "type": "while",
          },
          Object {
            "body": Array [
              Object {
                "line": 62,
                "name": "umdrehen",
                "type": "functionCall",
              },
              Object {
                "body": Array [
                  Object {
                    "action": "STEP",
                    "line": 65,
                    "type": "call",
                  },
                ],
                "line": 66,
                "test": Object {
                  "line": 64,
                  "name": "istrechtsziegelundfrei",
                  "type": "conditionCall",
                },
                "type": "while",
              },
              Object {
                "body": Array [
                  Object {
                    "action": "SOUND",
                    "line": 70,
                    "type": "call",
                  },
                  Object {
                    "action": "EXIT",
                    "line": 71,
                    "type": "systemCall",
                  },
                ],
                "elseBody": Array [
                  Object {
                    "action": "TURN_RIGHT",
                    "line": 74,
                    "type": "call",
                  },
                  Object {
                    "line": 75,
                    "name": "reihehoch",
                    "type": "functionCall",
                  },
                ],
                "line": 76,
                "test": Object {
                  "line": 67,
                  "name": "istrechtsziegel",
                  "type": "conditionCall",
                },
                "type": "if",
              },
            ],
            "elseBody": Array [
              Object {
                "action": "TURN_LEFT",
                "line": 79,
                "type": "call",
              },
              Object {
                "line": 80,
                "name": "reihehoch",
                "type": "functionCall",
              },
            ],
            "line": 81,
            "test": Object {
              "line": 60,
              "name": "istlinksziegel",
              "type": "conditionCall",
            },
            "type": "if",
          },
        ],
        "line": 82,
        "test": Object {
          "line": 55,
          "state": "NOT_IS_MARKER",
          "type": "state",
        },
        "type": "while",
      },
      Object {
        "action": "TURN_LEFT",
        "line": 83,
        "type": "call",
      },
    ],
    "line": 84,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Laufen 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "action": "TURN_LEFT",
          "line": 4,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 5,
          "type": "call",
        },
      ],
      "identifier": "umdrehen",
      "line": 6,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "body": Array [
              Object {
                "action": "STEP",
                "line": 11,
                "type": "call",
              },
            ],
            "elseBody": Array [
              Object {
                "action": "TURN_LEFT",
                "line": 13,
                "type": "call",
              },
              Object {
                "body": Array [
                  Object {
                    "line": 15,
                    "name": "umdrehen",
                    "type": "functionCall",
                  },
                ],
                "elseBody": Array [],
                "line": 16,
                "test": Object {
                  "line": 14,
                  "state": "NOT_IS_BRICK",
                  "type": "state",
                },
                "type": "if",
              },
              Object {
                "action": "STEP",
                "line": 17,
                "type": "call",
              },
            ],
            "line": 18,
            "test": Object {
              "line": 10,
              "state": "IS_BRICK",
              "type": "state",
            },
            "type": "if",
          },
        ],
        "line": 19,
        "test": Object {
          "line": 9,
          "state": "NOT_IS_MARKER",
          "type": "state",
        },
        "type": "while",
      },
    ],
    "line": 19,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Links Invertieren 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "body": Array [
              Object {
                "action": "STEP",
                "line": 4,
                "type": "call",
              },
            ],
            "elseBody": Array [
              Object {
                "action": "STEP",
                "line": 6,
                "type": "call",
              },
              Object {
                "action": "TURN_LEFT",
                "line": 7,
                "type": "call",
              },
              Object {
                "action": "BRICK_PUT",
                "line": 8,
                "type": "call",
              },
              Object {
                "action": "TURN_RIGHT",
                "line": 9,
                "type": "call",
              },
            ],
            "line": 10,
            "test": Object {
              "line": 3,
              "state": "IS_BRICK",
              "type": "state",
            },
            "type": "if",
          },
        ],
        "line": 11,
        "test": Object {
          "line": 2,
          "state": "NOT_IS_WALL",
          "type": "state",
        },
        "type": "while",
      },
    ],
    "line": 11,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Schachbrett 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "action": "MARKER_SET",
              "line": 7,
              "type": "call",
            },
            Object {
              "body": Array [
                Object {
                  "action": "STEP",
                  "line": 8,
                  "type": "call",
                },
              ],
              "elseBody": Array [],
              "line": 8,
              "test": Object {
                "line": 8,
                "state": "NOT_IS_WALL",
                "type": "state",
              },
              "type": "if",
            },
            Object {
              "body": Array [
                Object {
                  "action": "STEP",
                  "line": 9,
                  "type": "call",
                },
              ],
              "elseBody": Array [],
              "line": 9,
              "test": Object {
                "line": 9,
                "state": "NOT_IS_WALL",
                "type": "state",
              },
              "type": "if",
            },
          ],
          "line": 10,
          "test": Object {
            "line": 6,
            "state": "NOT_IS_WALL",
            "type": "state",
          },
          "type": "while",
        },
      ],
      "identifier": "markierezeile",
      "line": 11,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "action": "TURN_LEFT",
          "line": 14,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "action": "STEP",
              "line": 16,
              "type": "call",
            },
            Object {
              "action": "TURN_LEFT",
              "line": 17,
              "type": "call",
            },
          ],
          "elseBody": Array [],
          "line": 18,
          "test": Object {
            "line": 15,
            "state": "NOT_IS_WALL",
            "type": "state",
          },
          "type": "if",
        },
      ],
      "identifier": "nachlinks",
      "line": 19,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "action": "TURN_RIGHT",
          "line": 22,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "action": "STEP",
              "line": 24,
              "type": "call",
            },
            Object {
              "action": "TURN_RIGHT",
              "line": 25,
              "type": "call",
            },
          ],
          "elseBody": Array [],
          "line": 26,
          "test": Object {
            "line": 23,
            "state": "NOT_IS_WALL",
            "type": "state",
          },
          "type": "if",
        },
      ],
      "identifier": "nachrechts",
      "line": 27,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "line": 31,
            "name": "markierezeile",
            "type": "functionCall",
          },
          Object {
            "body": Array [
              Object {
                "line": 33,
                "name": "nachlinks",
                "type": "functionCall",
              },
            ],
            "elseBody": Array [
              Object {
                "line": 35,
                "name": "nachrechts",
                "type": "functionCall",
              },
            ],
            "line": 36,
            "test": Object {
              "line": 32,
              "state": "IS_SOUTH",
              "type": "state",
            },
            "type": "if",
          },
        ],
        "line": 37,
        "test": Object {
          "line": 30,
          "state": "NOT_IS_WALL",
          "type": "state",
        },
        "type": "while",
      },
    ],
    "line": 38,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Spirale 1`] = `
Object {
  "conditions": Array [
    Object {
      "body": Array [
        Object {
          "action": "TRUE",
          "line": 6,
          "type": "systemCall",
        },
        Object {
          "body": Array [
            Object {
              "action": "FALSE",
              "line": 7,
              "type": "systemCall",
            },
          ],
          "elseBody": Array [],
          "line": 7,
          "test": Object {
            "line": 7,
            "state": "IS_WALL",
            "type": "state",
          },
          "type": "if",
        },
        Object {
          "body": Array [
            Object {
              "action": "FALSE",
              "line": 8,
              "type": "systemCall",
            },
          ],
          "elseBody": Array [],
          "line": 8,
          "test": Object {
            "line": 8,
            "state": "IS_BRICK",
            "type": "state",
          },
          "type": "if",
        },
      ],
      "identifier": "istfrei",
      "line": 9,
      "type": "condition",
    },
  ],
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "body": Array [
              Object {
                "action": "BRICK_PUT",
                "line": 14,
                "type": "call",
              },
              Object {
                "action": "STEP",
                "line": 15,
                "type": "call",
              },
            ],
            "line": 16,
            "test": Object {
              "line": 13,
              "name": "istfrei",
              "type": "conditionCall",
            },
            "type": "while",
          },
          Object {
            "action": "TURN_LEFT",
            "line": 17,
            "type": "call",
          },
        ],
        "line": 18,
        "test": Object {
          "line": 12,
          "name": "istfrei",
          "type": "conditionCall",
        },
        "type": "while",
      },
    ],
    "line": 19,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Stapeln 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "action": "FAST",
          "line": 5,
          "type": "systemCall",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 6,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 7,
          "type": "call",
        },
        Object {
          "action": "SLOW",
          "line": 8,
          "type": "systemCall",
        },
      ],
      "identifier": "umdrehen",
      "line": 9,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "action": "FAST",
          "line": 12,
          "type": "systemCall",
        },
        Object {
          "line": 13,
          "name": "umdrehen",
          "type": "functionCall",
        },
        Object {
          "action": "STEP",
          "line": 14,
          "type": "call",
        },
        Object {
          "line": 15,
          "name": "umdrehen",
          "type": "functionCall",
        },
        Object {
          "action": "SLOW",
          "line": 16,
          "type": "systemCall",
        },
      ],
      "identifier": "schrittzurück",
      "line": 17,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "action": "TURN_LEFT",
          "line": 21,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "body": Array [
                Object {
                  "action": "BRICK_TAKE",
                  "line": 24,
                  "type": "call",
                },
              ],
              "line": 25,
              "test": Object {
                "line": 23,
                "state": "IS_BRICK",
                "type": "state",
              },
              "type": "while",
            },
            Object {
              "action": "STEP",
              "line": 26,
              "type": "call",
            },
          ],
          "line": 27,
          "test": Object {
            "line": 22,
            "state": "NOT_IS_WALL",
            "type": "state",
          },
          "type": "while",
        },
        Object {
          "line": 29,
          "name": "schrittzurück",
          "type": "functionCall",
        },
        Object {
          "body": Array [
            Object {
              "action": "BRICK_PUT",
              "line": 31,
              "type": "call",
            },
          ],
          "line": 32,
          "test": Object {
            "line": 30,
            "state": "NOT_IS_EMPTY",
            "type": "state",
          },
          "type": "while",
        },
        Object {
          "line": 34,
          "name": "umdrehen",
          "type": "functionCall",
        },
        Object {
          "body": Array [
            Object {
              "action": "STEP",
              "line": 36,
              "type": "call",
            },
          ],
          "line": 37,
          "test": Object {
            "line": 35,
            "state": "NOT_IS_WALL",
            "type": "state",
          },
          "type": "while",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 38,
          "type": "call",
        },
      ],
      "identifier": "reihestapeln",
      "line": 39,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "line": 43,
            "name": "reihestapeln",
            "type": "functionCall",
          },
          Object {
            "body": Array [
              Object {
                "action": "STEP",
                "line": 44,
                "type": "call",
              },
            ],
            "elseBody": Array [],
            "line": 44,
            "test": Object {
              "line": 44,
              "state": "NOT_IS_WALL",
              "type": "state",
            },
            "type": "if",
          },
        ],
        "line": 45,
        "test": Object {
          "line": 42,
          "state": "NOT_IS_WALL",
          "type": "state",
        },
        "type": "while",
      },
      Object {
        "line": 46,
        "name": "reihestapeln",
        "type": "functionCall",
      },
    ],
    "line": 47,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Treppe 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "action": "TURN_LEFT",
          "line": 4,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 5,
          "type": "call",
        },
      ],
      "identifier": "umdrehen",
      "line": 6,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "line": 9,
          "name": "umdrehen",
          "type": "functionCall",
        },
        Object {
          "action": "STEP",
          "line": 10,
          "type": "call",
        },
        Object {
          "line": 11,
          "name": "umdrehen",
          "type": "functionCall",
        },
      ],
      "identifier": "schrittrückwärts",
      "line": 12,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "action": "STEP",
            "line": 16,
            "type": "call",
          },
          Object {
            "line": 17,
            "name": "umdrehen",
            "type": "functionCall",
          },
          Object {
            "action": "BRICK_PUT",
            "line": 18,
            "type": "call",
          },
          Object {
            "line": 19,
            "name": "umdrehen",
            "type": "functionCall",
          },
        ],
        "line": 20,
        "test": Object {
          "line": 15,
          "state": "IS_BRICK",
          "type": "state",
        },
        "type": "while",
      },
      Object {
        "line": 21,
        "name": "schrittrückwärts",
        "type": "functionCall",
      },
      Object {
        "action": "BRICK_PUT",
        "line": 22,
        "type": "call",
      },
      Object {
        "action": "STEP",
        "line": 23,
        "type": "call",
      },
      Object {
        "action": "SOUND",
        "line": 24,
        "type": "call",
      },
    ],
    "line": 20,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Treppe Bauen 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "action": "TURN_LEFT",
          "line": 3,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 4,
          "type": "call",
        },
      ],
      "identifier": "umdrehen",
      "line": 5,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "action": "STEP",
          "line": 8,
          "type": "call",
        },
        Object {
          "action": "STEP",
          "line": 9,
          "type": "call",
        },
      ],
      "identifier": "zweischritt",
      "line": 10,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "action": "MARKER_SET",
            "line": 14,
            "type": "call",
          },
          Object {
            "action": "TURN_LEFT",
            "line": 15,
            "type": "call",
          },
          Object {
            "body": Array [
              Object {
                "action": "STEP",
                "line": 17,
                "type": "call",
              },
            ],
            "line": 18,
            "test": Object {
              "line": 16,
              "state": "IS_BRICK",
              "type": "state",
            },
            "type": "while",
          },
          Object {
            "line": 19,
            "name": "zweischritt",
            "type": "functionCall",
          },
          Object {
            "line": 20,
            "name": "umdrehen",
            "type": "functionCall",
          },
          Object {
            "body": Array [
              Object {
                "action": "BRICK_PUT",
                "line": 22,
                "type": "call",
              },
              Object {
                "action": "STEP",
                "line": 23,
                "type": "call",
              },
            ],
            "line": 24,
            "test": Object {
              "line": 21,
              "state": "NOT_IS_MARKER",
              "type": "state",
            },
            "type": "while",
          },
          Object {
            "action": "TURN_LEFT",
            "line": 25,
            "type": "call",
          },
        ],
        "line": 26,
        "times": "7",
        "type": "repeat",
      },
    ],
    "line": 26,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Treppe Bauen 2 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "action": "TURN_LEFT",
          "line": 3,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 4,
          "type": "call",
        },
      ],
      "identifier": "umdrehen",
      "line": 5,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "action": "STEP",
          "line": 8,
          "type": "call",
        },
        Object {
          "action": "STEP",
          "line": 9,
          "type": "call",
        },
      ],
      "identifier": "zweischritt",
      "line": 10,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "action": "BRICK_PUT",
              "line": 14,
              "type": "call",
            },
            Object {
              "action": "STEP",
              "line": 15,
              "type": "call",
            },
          ],
          "line": 16,
          "test": Object {
            "line": 13,
            "state": "NOT_IS_MARKER",
            "type": "state",
          },
          "type": "while",
        },
      ],
      "identifier": "eineschichtlegen",
      "line": 17,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "action": "STEP",
              "line": 21,
              "type": "call",
            },
          ],
          "line": 22,
          "test": Object {
            "line": 20,
            "state": "IS_BRICK",
            "type": "state",
          },
          "type": "while",
        },
      ],
      "identifier": "hinabsteigen",
      "line": 23,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [
      Object {
        "action": "MARKER_SET",
        "line": 26,
        "type": "call",
      },
      Object {
        "body": Array [
          Object {
            "line": 28,
            "name": "zweischritt",
            "type": "functionCall",
          },
          Object {
            "line": 29,
            "name": "umdrehen",
            "type": "functionCall",
          },
          Object {
            "line": 30,
            "name": "eineschichtlegen",
            "type": "functionCall",
          },
          Object {
            "line": 31,
            "name": "umdrehen",
            "type": "functionCall",
          },
          Object {
            "line": 32,
            "name": "hinabsteigen",
            "type": "functionCall",
          },
        ],
        "line": 33,
        "times": "7",
        "type": "repeat",
      },
      Object {
        "action": "STEP",
        "line": 34,
        "type": "call",
      },
      Object {
        "line": 35,
        "name": "umdrehen",
        "type": "functionCall",
      },
    ],
    "line": 36,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Treppe Bauen 3 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "action": "TURN_LEFT",
          "line": 3,
          "type": "call",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 4,
          "type": "call",
        },
      ],
      "identifier": "umdrehen",
      "line": 5,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "action": "STEP",
          "line": 8,
          "type": "call",
        },
        Object {
          "action": "STEP",
          "line": 9,
          "type": "call",
        },
      ],
      "identifier": "zweischritt",
      "line": 10,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "action": "BRICK_PUT",
              "line": 14,
              "type": "call",
            },
            Object {
              "action": "STEP",
              "line": 15,
              "type": "call",
            },
          ],
          "line": 16,
          "test": Object {
            "line": 13,
            "state": "NOT_IS_MARKER",
            "type": "state",
          },
          "type": "while",
        },
      ],
      "identifier": "eineschichtlegen",
      "line": 17,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "action": "STEP",
              "line": 21,
              "type": "call",
            },
          ],
          "line": 22,
          "test": Object {
            "line": 20,
            "state": "IS_BRICK",
            "type": "state",
          },
          "type": "while",
        },
      ],
      "identifier": "hinabsteigen",
      "line": 23,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [
      Object {
        "action": "MARKER_SET",
        "line": 26,
        "type": "call",
      },
      Object {
        "body": Array [
          Object {
            "line": 28,
            "name": "zweischritt",
            "type": "functionCall",
          },
          Object {
            "line": 29,
            "name": "umdrehen",
            "type": "functionCall",
          },
          Object {
            "line": 30,
            "name": "eineschichtlegen",
            "type": "functionCall",
          },
          Object {
            "line": 31,
            "name": "umdrehen",
            "type": "functionCall",
          },
          Object {
            "line": 32,
            "name": "hinabsteigen",
            "type": "functionCall",
          },
        ],
        "line": 33,
        "times": "7",
        "type": "repeat",
      },
      Object {
        "action": "STEP",
        "line": 34,
        "type": "call",
      },
      Object {
        "line": 35,
        "name": "umdrehen",
        "type": "functionCall",
      },
    ],
    "line": 36,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Umsetzen 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "action": "BRICK_TAKE",
            "line": 5,
            "type": "call",
          },
          Object {
            "action": "TURN_RIGHT",
            "line": 6,
            "type": "call",
          },
          Object {
            "action": "STEP",
            "line": 7,
            "type": "call",
          },
          Object {
            "action": "TURN_LEFT",
            "line": 8,
            "type": "call",
          },
          Object {
            "action": "BRICK_PUT",
            "line": 9,
            "type": "call",
          },
          Object {
            "action": "TURN_LEFT",
            "line": 10,
            "type": "call",
          },
          Object {
            "action": "STEP",
            "line": 11,
            "type": "call",
          },
          Object {
            "action": "TURN_RIGHT",
            "line": 12,
            "type": "call",
          },
        ],
        "line": 13,
        "test": Object {
          "line": 4,
          "state": "IS_BRICK",
          "type": "state",
        },
        "type": "while",
      },
    ],
    "line": 13,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Viereck 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "action": "BRICK_TAKE",
              "line": 4,
              "type": "call",
            },
            Object {
              "action": "STEP",
              "line": 5,
              "type": "call",
            },
          ],
          "line": 6,
          "test": Object {
            "line": 3,
            "state": "IS_BRICK",
            "type": "state",
          },
          "type": "while",
        },
      ],
      "identifier": "aufhebenreihe",
      "line": 7,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "action": "STEP",
              "line": 11,
              "type": "call",
            },
            Object {
              "action": "TURN_LEFT",
              "line": 12,
              "type": "call",
            },
            Object {
              "action": "STEP",
              "line": 13,
              "type": "call",
            },
            Object {
              "action": "TURN_LEFT",
              "line": 14,
              "type": "call",
            },
          ],
          "elseBody": Array [
            Object {
              "action": "STEP",
              "line": 16,
              "type": "call",
            },
            Object {
              "action": "TURN_RIGHT",
              "line": 17,
              "type": "call",
            },
            Object {
              "action": "STEP",
              "line": 18,
              "type": "call",
            },
            Object {
              "action": "TURN_RIGHT",
              "line": 19,
              "type": "call",
            },
          ],
          "line": 20,
          "test": Object {
            "line": 10,
            "state": "IS_SOUTH",
            "type": "state",
          },
          "type": "if",
        },
      ],
      "identifier": "wenden",
      "line": 21,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "line": 25,
            "name": "aufhebenreihe",
            "type": "functionCall",
          },
          Object {
            "line": 26,
            "name": "wenden",
            "type": "functionCall",
          },
        ],
        "line": 27,
        "test": Object {
          "line": 24,
          "state": "IS_BRICK",
          "type": "state",
        },
        "type": "while",
      },
    ],
    "line": 27,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Wand Entlang 1`] = `
Object {
  "conditions": Array [],
  "functions": Array [],
  "program": Object {
    "body": Array [
      Object {
        "body": Array [
          Object {
            "body": Array [
              Object {
                "action": "TURN_LEFT",
                "line": 3,
                "type": "call",
              },
            ],
            "elseBody": Array [],
            "line": 4,
            "test": Object {
              "line": 2,
              "state": "IS_WALL",
              "type": "state",
            },
            "type": "if",
          },
          Object {
            "action": "STEP",
            "line": 5,
            "type": "call",
          },
        ],
        "line": 6,
        "times": "100",
        "type": "repeat",
      },
    ],
    "line": 6,
    "type": "program",
  },
  "type": "ast",
}
`;

exports[`Zimmer 1`] = `
Object {
  "conditions": Array [
    Object {
      "body": Array [
        Object {
          "action": "FAST",
          "line": 8,
          "type": "systemCall",
        },
        Object {
          "action": "FALSE",
          "line": 9,
          "type": "systemCall",
        },
        Object {
          "action": "TURN_RIGHT",
          "line": 10,
          "type": "call",
        },
        Object {
          "body": Array [
            Object {
              "action": "TRUE",
              "line": 11,
              "type": "systemCall",
            },
          ],
          "elseBody": Array [],
          "line": 11,
          "test": Object {
            "line": 11,
            "state": "IS_BRICK",
            "type": "state",
          },
          "type": "if",
        },
        Object {
          "action": "TURN_LEFT",
          "line": 12,
          "type": "call",
        },
        Object {
          "action": "SLOW",
          "line": 13,
          "type": "systemCall",
        },
      ],
      "identifier": "istziegelrechts",
      "line": 14,
      "type": "condition",
    },
  ],
  "functions": Array [
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "action": "STEP",
              "line": 19,
              "type": "call",
            },
            Object {
              "body": Array [
                Object {
                  "action": "EXIT",
                  "line": 21,
                  "type": "systemCall",
                },
              ],
              "elseBody": Array [],
              "line": 22,
              "test": Object {
                "line": 20,
                "state": "IS_MARKER",
                "type": "state",
              },
              "type": "if",
            },
          ],
          "line": 23,
          "test": Object {
            "line": 18,
            "state": "NOT_IS_BRICK",
            "type": "state",
          },
          "type": "while",
        },
      ],
      "identifier": "biszurwand",
      "line": 24,
      "type": "function",
    },
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "body": Array [
                Object {
                  "action": "TURN_LEFT",
                  "line": 30,
                  "type": "call",
                },
              ],
              "elseBody": Array [],
              "line": 31,
              "test": Object {
                "line": 29,
                "state": "IS_BRICK",
                "type": "state",
              },
              "type": "if",
            },
            Object {
              "action": "STEP",
              "line": 32,
              "type": "call",
            },
          ],
          "line": 33,
          "test": Object {
            "line": 28,
            "name": "istziegelrechts",
            "type": "conditionCall",
          },
          "type": "while",
        },
      ],
      "identifier": "anderwandentlang",
      "line": 34,
      "type": "function",
    },
  ],
  "program": Object {
    "body": Array [
      Object {
        "line": 38,
        "name": "biszurwand",
        "type": "functionCall",
      },
      Object {
        "action": "TURN_LEFT",
        "line": 39,
        "type": "call",
      },
      Object {
        "line": 40,
        "name": "anderwandentlang",
        "type": "functionCall",
      },
      Object {
        "action": "TURN_RIGHT",
        "line": 41,
        "type": "call",
      },
      Object {
        "body": Array [
          Object {
            "action": "STEP",
            "line": 43,
            "type": "call",
          },
        ],
        "line": 44,
        "test": Object {
          "line": 42,
          "state": "NOT_IS_MARKER",
          "type": "state",
        },
        "type": "while",
      },
    ],
    "line": 45,
    "type": "program",
  },
  "type": "ast",
}
`;
